# minidlna-cmake

./: .gitmodules  CMakeLists.txt
